{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 33,
  "lineage": "2bf94be5-6461-612c-afb7-ae57d8d89c6e",
  "resources": [
    {
      "module": "module.management_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133644693386:security-group/sg-0e1fc7c35e0c5f191",
            "description": "Management Platform Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1fc7c35e0c5f191",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "103.195.202.202/32"
                ],
                "description": "SSH (103.195.202.202/32)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "103.235.0.227/32"
                ],
                "description": "SSH (103.235.0.227/32)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "crystal-management-sg",
            "name_prefix": "",
            "owner_id": "133644693386",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "shared-services",
              "ManagedBy": "Terraform",
              "Name": "crystal-management-sg",
              "Project": "Crystal"
            },
            "tags_all": {
              "Environment": "shared-services",
              "ManagedBy": "Terraform",
              "Name": "crystal-management-sg",
              "Project": "Crystal"
            },
            "timeouts": null,
            "vpc_id": "vpc-015c1d032e8d69885"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "id": "sg-0e1fc7c35e0c5f191",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.management_security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133644693386:security-group-rule/sgr-0204869fd77a54a7c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0204869fd77a54a7c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0e1fc7c35e0c5f191",
            "security_group_rule_id": "sgr-0204869fd77a54a7c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "id": "sgr-0204869fd77a54a7c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.management_security_group.aws_security_group.management",
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.management_security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133644693386:security-group-rule/sgr-0bd58dcfd782c971d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP",
            "from_port": 80,
            "id": "sgr-0bd58dcfd782c971d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0e1fc7c35e0c5f191",
            "security_group_rule_id": "sgr-0bd58dcfd782c971d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "id": "sgr-0bd58dcfd782c971d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.management_security_group.aws_security_group.management",
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.management_security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133644693386:security-group-rule/sgr-0f4aeff2609c6eea1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgr-0f4aeff2609c6eea1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0e1fc7c35e0c5f191",
            "security_group_rule_id": "sgr-0f4aeff2609c6eea1",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "id": "sgr-0f4aeff2609c6eea1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.management_security_group.aws_security_group.management",
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.management_security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "103.195.202.202/32",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133644693386:security-group-rule/sgr-0a236c5f39e644164",
            "cidr_ipv4": "103.195.202.202/32",
            "cidr_ipv6": null,
            "description": "SSH (103.195.202.202/32)",
            "from_port": 22,
            "id": "sgr-0a236c5f39e644164",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0e1fc7c35e0c5f191",
            "security_group_rule_id": "sgr-0a236c5f39e644164",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "id": "sgr-0a236c5f39e644164",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.management_security_group.aws_security_group.management",
            "module.shared_services_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "103.235.0.227/32",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133644693386:security-group-rule/sgr-0c5f6a42c848803e7",
            "cidr_ipv4": "103.235.0.227/32",
            "cidr_ipv6": null,
            "description": "SSH (103.235.0.227/32)",
            "from_port": 22,
            "id": "sgr-0c5f6a42c848803e7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0e1fc7c35e0c5f191",
            "security_group_rule_id": "sgr-0c5f6a42c848803e7",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "id": "sgr-0c5f6a42c848803e7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.management_security_group.aws_security_group.management",
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.shared_services_igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133644693386:internet-gateway/igw-0e5a60ed80592f921",
            "id": "igw-0e5a60ed80592f921",
            "owner_id": "133644693386",
            "region": "ap-south-1",
            "tags": {
              "Environment": "SharedServices",
              "ManagedBy": "Terraform",
              "Name": "crystal-shared-services-igw",
              "Project": "Crystal"
            },
            "tags_all": {
              "Environment": "SharedServices",
              "ManagedBy": "Terraform",
              "Name": "crystal-shared-services-igw",
              "Project": "Crystal"
            },
            "vpc_id": "vpc-015c1d032e8d69885"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "id": "igw-0e5a60ed80592f921",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.shared_services_network_acl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133644693386:network-acl/acl-03dfaec5e7660b316",
            "egress": [],
            "id": "acl-03dfaec5e7660b316",
            "ingress": [],
            "owner_id": "133644693386",
            "region": "ap-south-1",
            "subnet_ids": [
              "subnet-03b38f91b4256d1b6",
              "subnet-0b9f026563c3d1b73"
            ],
            "tags": {
              "Environment": "SharedServices",
              "ManagedBy": "Terraform",
              "Name": "crystal-private-network-acl",
              "Project": "Crystal"
            },
            "tags_all": {
              "Environment": "SharedServices",
              "ManagedBy": "Terraform",
              "Name": "crystal-private-network-acl",
              "Project": "Crystal"
            },
            "vpc_id": "vpc-015c1d032e8d69885"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared_services_subnets.aws_subnet.private",
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.shared_services_network_acl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133644693386:network-acl/acl-0c5fc598233f4b034",
            "egress": [],
            "id": "acl-0c5fc598233f4b034",
            "ingress": [],
            "owner_id": "133644693386",
            "region": "ap-south-1",
            "subnet_ids": [
              "subnet-018d38a4f395b6058",
              "subnet-0d6cf643ad3940304"
            ],
            "tags": {
              "Environment": "SharedServices",
              "ManagedBy": "Terraform",
              "Name": "crystal-public-network-acl",
              "Project": "Crystal"
            },
            "tags_all": {
              "Environment": "SharedServices",
              "ManagedBy": "Terraform",
              "Name": "crystal-public-network-acl",
              "Project": "Crystal"
            },
            "vpc_id": "vpc-015c1d032e8d69885"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared_services_subnets.aws_subnet.public",
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.shared_services_network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-137548196",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03dfaec5e7660b316",
            "protocol": "-1",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "egress": true,
            "network_acl_id": "acl-03dfaec5e7660b316",
            "protocol": "-1",
            "region": "ap-south-1",
            "rule_number": 100
          },
          "dependencies": [
            "module.shared_services_network_acl.aws_network_acl.private",
            "module.shared_services_subnets.aws_subnet.private",
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.shared_services_network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_ephemeral_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-691622197",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03dfaec5e7660b316",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "egress": false,
            "network_acl_id": "acl-03dfaec5e7660b316",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_number": 110
          },
          "dependencies": [
            "module.shared_services_network_acl.aws_network_acl.private",
            "module.shared_services_subnets.aws_subnet.private",
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.shared_services_network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_vpc_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2322437821",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03dfaec5e7660b316",
            "protocol": "-1",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "egress": false,
            "network_acl_id": "acl-03dfaec5e7660b316",
            "protocol": "-1",
            "region": "ap-south-1",
            "rule_number": 100
          },
          "dependencies": [
            "module.shared_services_network_acl.aws_network_acl.private",
            "module.shared_services_subnets.aws_subnet.private",
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.shared_services_network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3127427539",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c5fc598233f4b034",
            "protocol": "-1",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "egress": true,
            "network_acl_id": "acl-0c5fc598233f4b034",
            "protocol": "-1",
            "region": "ap-south-1",
            "rule_number": 100
          },
          "dependencies": [
            "module.shared_services_network_acl.aws_network_acl.public",
            "module.shared_services_subnets.aws_subnet.public",
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.shared_services_network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_ephemeral_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-883730801",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c5fc598233f4b034",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "egress": false,
            "network_acl_id": "acl-0c5fc598233f4b034",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_number": 130
          },
          "dependencies": [
            "module.shared_services_network_acl.aws_network_acl.public",
            "module.shared_services_subnets.aws_subnet.public",
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.shared_services_network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2305213887",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c5fc598233f4b034",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "egress": false,
            "network_acl_id": "acl-0c5fc598233f4b034",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_number": 100
          },
          "dependencies": [
            "module.shared_services_network_acl.aws_network_acl.public",
            "module.shared_services_subnets.aws_subnet.public",
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.shared_services_network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_https_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1425022010",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c5fc598233f4b034",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "egress": false,
            "network_acl_id": "acl-0c5fc598233f4b034",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_number": 110
          },
          "dependencies": [
            "module.shared_services_network_acl.aws_network_acl.public",
            "module.shared_services_subnets.aws_subnet.public",
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.shared_services_network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3912921332",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c5fc598233f4b034",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "egress": false,
            "network_acl_id": "acl-0c5fc598233f4b034",
            "protocol": "6",
            "region": "ap-south-1",
            "rule_number": 120
          },
          "dependencies": [
            "module.shared_services_network_acl.aws_network_acl.public",
            "module.shared_services_subnets.aws_subnet.public",
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.shared_services_route_table",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e5a60ed80592f921",
            "id": "r-rtb-09cfe436f7cd1a5911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-09cfe436f7cd1a591",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-09cfe436f7cd1a591"
          },
          "dependencies": [
            "module.shared_services_igw.aws_internet_gateway.this",
            "module.shared_services_route_table.aws_route_table.public",
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.shared_services_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133644693386:route-table/rtb-09cfe436f7cd1a591",
            "id": "rtb-09cfe436f7cd1a591",
            "owner_id": "133644693386",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e5a60ed80592f921",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "SharedServices",
              "ManagedBy": "Terraform",
              "Name": "crystal-public-route-table",
              "Project": "Crystal"
            },
            "tags_all": {
              "Environment": "SharedServices",
              "ManagedBy": "Terraform",
              "Name": "crystal-public-route-table",
              "Project": "Crystal"
            },
            "timeouts": null,
            "vpc_id": "vpc-015c1d032e8d69885"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "id": "rtb-09cfe436f7cd1a591",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.shared_services_route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abba0cd9a387ca95",
            "region": "ap-south-1",
            "route_table_id": "rtb-09cfe436f7cd1a591",
            "subnet_id": "subnet-0d6cf643ad3940304"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "id": "rtbassoc-0abba0cd9a387ca95",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.shared_services_route_table.aws_route_table.public",
            "module.shared_services_subnets.aws_subnet.public",
            "module.shared_services_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d927064769987301",
            "region": "ap-south-1",
            "route_table_id": "rtb-09cfe436f7cd1a591",
            "subnet_id": "subnet-018d38a4f395b6058"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "id": "rtbassoc-0d927064769987301",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.shared_services_route_table.aws_route_table.public",
            "module.shared_services_subnets.aws_subnet.public",
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.shared_services_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "crystal-private-subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133644693386:subnet/subnet-03b38f91b4256d1b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b38f91b4256d1b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133644693386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "SharedServices",
              "ManagedBy": "Terraform",
              "Name": "crystal-private-subnet-a",
              "Project": "Crystal",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "SharedServices",
              "ManagedBy": "Terraform",
              "Name": "crystal-private-subnet-a",
              "Project": "Crystal",
              "Type": "Private"
            },
            "vpc_id": "vpc-015c1d032e8d69885"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "id": "subnet-03b38f91b4256d1b6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.shared_services_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "crystal-private-subnet-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133644693386:subnet/subnet-0b9f026563c3d1b73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9f026563c3d1b73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133644693386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "SharedServices",
              "ManagedBy": "Terraform",
              "Name": "crystal-private-subnet-b",
              "Project": "Crystal",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "SharedServices",
              "ManagedBy": "Terraform",
              "Name": "crystal-private-subnet-b",
              "Project": "Crystal",
              "Type": "Private"
            },
            "vpc_id": "vpc-015c1d032e8d69885"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "id": "subnet-0b9f026563c3d1b73",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.shared_services_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "crystal-public-subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133644693386:subnet/subnet-0d6cf643ad3940304",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6cf643ad3940304",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "133644693386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "SharedServices",
              "ManagedBy": "Terraform",
              "Name": "crystal-public-subnet-a",
              "Project": "Crystal",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "SharedServices",
              "ManagedBy": "Terraform",
              "Name": "crystal-public-subnet-a",
              "Project": "Crystal",
              "Type": "Public"
            },
            "vpc_id": "vpc-015c1d032e8d69885"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "id": "subnet-0d6cf643ad3940304",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.shared_services_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "crystal-public-subnet-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133644693386:subnet/subnet-018d38a4f395b6058",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018d38a4f395b6058",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "133644693386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "SharedServices",
              "ManagedBy": "Terraform",
              "Name": "crystal-public-subnet-b",
              "Project": "Crystal",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "SharedServices",
              "ManagedBy": "Terraform",
              "Name": "crystal-public-subnet-b",
              "Project": "Crystal",
              "Type": "Public"
            },
            "vpc_id": "vpc-015c1d032e8d69885"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "id": "subnet-018d38a4f395b6058",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.shared_services_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.shared_services_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:133644693386:vpc/vpc-015c1d032e8d69885",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06a0a0034638a83b8",
            "default_route_table_id": "rtb-0623885c14073d137",
            "default_security_group_id": "sg-056b7325e6cc5e06e",
            "dhcp_options_id": "dopt-01ad062fdbf6a001f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-015c1d032e8d69885",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0623885c14073d137",
            "owner_id": "133644693386",
            "region": "ap-south-1",
            "tags": {
              "Environment": "SharedServices",
              "ManagedBy": "Terraform",
              "Name": "crystal-shared-vpc",
              "Project": "Crystal"
            },
            "tags_all": {
              "Environment": "SharedServices",
              "ManagedBy": "Terraform",
              "Name": "crystal-shared-vpc",
              "Project": "Crystal"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133644693386",
            "id": "vpc-015c1d032e8d69885",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}